Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72655

Some properties of KeyboardEvent JS object are not set for Dead keys

    XMLWordPrintable

Details

    • Linux/X11
    • 024aef49ee324bf45c29e85c9a637b1495292503 (qt/qtwebengine/5.12)

    Description

      See https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent

      Try the attached keyboardevent.html to reproduce.

      The following properties are unset:

      • KeyboardEvent.key must be "Dead"
      • KeyboardEvent.keyCode is 0 because of unset content::NativeWebKeyboardEvent::windows_key_code
      • KeyboardEvent.which is also 0 because of KeyboardEvent.keyCode

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            juri.valdmann Jüri Valdmann (Inactive)
            pvarga Peter Varga
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes