Fix key and keyCode of KeyboardEvents for dead keys

1. Extend Qt::Key to ui::DomKey conversion to handle most Qt::Key_Dead_* keys.

2. Supplement Qt::Key to windows key code conversion with a fall back to
   DomCodeToUsLayoutKeyboardCode.

Fixes: QTBUG-72655
Change-Id: I9ab8dc5f931065c4dc381adc5a1690ee288b8244
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>